# astronaught

./: .gitignore  Astro.cmake  CMakeLists.txt  LibVersa.cmake  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: Astro.cmake  DocsGenerator.cmake  Doxy.cmake  Utils.cmake
docs/: Doxyfile.in
include/astro/: astro.hpp  debug.hpp  io.hpp  utils.hpp
include/astro/async/: executor.hpp  handler.hpp  process_base.hpp  signals.hpp
include/astro/async/unix/: executor_impl.hpp  handler_impl.hpp
include/astro/compile_time/: preprocess.hpp  string.hpp  traits.hpp
include/astro/cryptid/: city_hash.hpp  uint128.hpp
include/astro/cryptid/amd64/: ops.hpp
include/astro/debug/: backtrace.hpp
include/astro/debug/win/: trace_impl.hpp
include/astro/io/: file_sink.hpp  print.hpp  sink.hpp
include/astro/io/unix/: native_file_sink.hpp
include/astro/io/win/: native_file_sink.hpp
include/astro/log/: call_info.hpp  logger.hpp  term_color.hpp
include/astro/memory/win/: mapper_impl.hpp
include/astro/serial/: serializer.hpp
include/astro/testing/: assertion.hpp
include/astro/types/: float_ops.hpp
include/astro/utils/: closure_wrapper.hpp  concepts.hpp  demangle.hpp  easing.hpp  file.hpp  misc.hpp  temp_file.hpp
include/astro/utils/unix/: file_ops.hpp
include/astro/utils/win/: file_ops.hpp
include/versa/: async.hpp  closure_wrapper.hpp  compile_time.hpp  compile_time_tester.hpp  constants.hpp  constants.inc  fixed_bytes.hpp  fixed_string.hpp  frozen.hpp  handler.hpp  info.hpp  info.pp  jmp.hpp  logger.hpp  mapper.hpp  mapper_base.hpp  memory.hpp  meta.hpp  process.hpp  process_base.hpp  signals.hpp  utils.hpp  version.h.in  version.hpp  version.hpp.in  version.pp.in
include/versa/app/: cli.hpp
include/versa/arch/unix/: executor_impl.hpp  handler_impl.hpp  mapper_impl.hpp  mappers.hpp  process_impl.hpp
include/versa/arch/win32/: executor_impl.hpp  mapper_impl.hpp  mappers.hpp
include/versa/async/: executor.hpp  handler.hpp  process.hpp  process_base.hpp  signals.hpp
include/versa/async/unix/: executor_impl.hpp  handler_impl.hpp  process_impl.hpp
include/versa/async/win/: process_impl.hpp
include/versa/compile_time/: map.hpp  meta.hpp  preprocess.hpp  random.hpp  reflect.hpp  string.hpp  traits.hpp
include/versa/cryptid/: ops.hpp  uint128.hpp  ulid.hpp  uuid.hpp
include/versa/cryptid/amd64/: ops.hpp
include/versa/cryptid/arm/: ops.hpp
include/versa/frozen/: map.hpp  meta.hpp  meta3.hpp  string.hpp  traits.hpp
include/versa/info/: build_info.hpp  version.hpp  version.hpp.in  version.pp.in  version_info.hpp
include/versa/log/: call_info.hpp  logger.hpp  term_color.hpp
include/versa/logger/: call_info.hpp  term_color.hpp
include/versa/memory/: allocator.hpp  mapper.hpp  mapper_base.hpp  modes.hpp  tagged_ptr.hpp
include/versa/memory/unix/: mapper_impl.hpp
include/versa/memory/win/: mapper_impl.hpp
include/versa/meta/: traits.hpp
include/versa/serial/: alpha.hpp  proto.hpp  serializer.hpp
include/versa/types/: variant.hpp
include/versa/utils/: concepts.hpp  definitions.pp  defs.hpp  demangle.hpp  easing.hpp  fixed_string.hpp  format.hpp  interpolate.hpp  jmp.hpp  misc.hpp
tests/: CMakeLists.txt  astro_tests.cpp  async_tests.cpp  compile_time_tests.cpp  compile_time_tools_tests.cpp  cryptid_tests.cpp  debug_tests.cpp  enum_defs_1_tests.cpp  enum_defs_2_tests.cpp  enum_defs_3_tests.cpp  enum_defs_4_tests.cpp  fixed_bytes_tests.cpp  fixed_string_tests.cpp  frozen_tests.cpp  handler_tests.cpp  interpolate_tests.cpp  io_tests.cpp  logger_tests.cpp  map_tests.cpp  memory_tests.cpp  meta_tests.cpp  process_tests.cpp  serialize_tests.cpp  testing_tests.cpp  type_tests.cpp  util.hpp  utils.hpp  utils_tests.cpp  versa_tests.cpp
